--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <div id="content">
-            <form id="access">
+            <form id="loginForm">
                 <input type="text" id="username" placeholder="Username" required autofocus name="username">
                 <input type="password" id="password" placeholder="Password" required autofocus name="password">
             </form>
-            <button type="submit" id="sendLogin">Login</button>
+            <button type="submit" id="login">Login</button>
             <div id="loggedUser">
                 <button type="submit" id="logOut">Cerrar Sesión</button>
                 <br>
@@ -47,36 +47,35 @@
             };
             $(document).ready(function () {
                 $("#loggedUser").hide();
-                $("#sendLogin").click(function () {
-                    valores = $("#access").serializeObject();
-                    valores.password = forge_sha256($("#password").val());
-                    datos = {"ob": "user", "op": "login", "json": JSON.stringify(valores)};
+                $("#login").click(function () {
+                    values = $("#loginForm").serializeObject();
+                    values.password = forge_sha256($("#password").val());
+                    data = {"ob": "user", "op": "login", "json": JSON.stringify(values)};
                     $.ajax({
                         type: "POST",
                         url: "http://127.0.0.1:8080/fanlist/controller/Controller.php?XDEBUG_SESSION_START=netbeans-xdebug",
-                        data: datos,
+                        data: data,
                         dataType: "json",
                         success: function (data) {
                             if (data.status == 200) {
                                 $("#user").empty().append(data.json.username);
                                 $("#email").empty().append(data.json.mail);
                                 $("#loggedUser").show();
-                                $("#tryGet").show();
                             } else {
                                 console.log("Error server login")
                             }
                         },
                         error: function (data) {
-                            alert("Error cliente login");
+                            console.log("Error cliente login");
                         }
                     });
                 })
                 $("#logOut").click(function () {
-                    datos = {"ob": "user", "op": "logout", "json": JSON.stringify(valores)};
+                    data = {"ob": "user", "op": "logout", "json": JSON.stringify(values)};
                     $.ajax({
                         type: "POST",
                         url: "http://127.0.0.1:8080/fanlist/controller/Controller.php?XDEBUG_SESSION_START=netbeans-xdebug",
-                        data: datos,
+                        data: data,
                         dataType: "json",
                         success: function (data) {
                             if (data.status == 200) {
@@ -88,7 +87,7 @@
                             }
                         },
                         error: function (data) {
-                            alert("Error cliente logout");
+                            console.log("Error cliente logout");
                         }
                     });
                 })
