--- a/html/index.html
+++ b/html/index.html
@@ -1,16 +1,187 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<html lang="es-ES">
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <link href="style.css" rel="stylesheet" type="text/css"/>
+        <script src="//code.jquery.com/jquery-latest.js"></script>
+        <script src="js/forge-sha256.min.js"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+        <title>Ideo Fanlisting - Home Page</title>
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="wrapper" id="index">
+            <div class="table" id="loginUser">
+                <div class="row">
+                    <div class="cell middle">
+                        <div class="container login">
+                            <div class="content">
+                                <div class="table">
+                                    <div class="row">
+                                        <div class="cell half middle">
+                                            <img src="img/Idego_logo.png" alt="" id="logo"/>
+                                        </div>
+                                        <div class="cell half middle">
+                                            <h1>Admin Login</h1>
+                                            <form id="loginForm">
+                                                <input type="text" id="username" placeholder="Username" required autofocus name="username">
+                                                <input type="password" id="password" placeholder="Password" required autofocus name="password">
+                                            </form>
+                                            <button type="submit" id="login"><i class="fas fa-sign-in-alt"></i> Login</button>
+                                            <div class="response"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="table" id="loggedUser">
+                <div class="row">
+                    <div class="cell top">
+                        <div class="container" >
+                            <div class="table top_nav">
+                                <div class="row">
+                                    <div class="cell user_info middle">
+                                        <i class="fas fa-user"></i> Welcome back, <span id="user"></span>
+                                    </div>
+                                    <div class="cell logOut middle">
+                                        <button type="submit" id="logOut">Logout <i class="fas fa-sign-out-alt"></i></button>
+                                        <a href="../index.html">View Site <i class="fas fa-home"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content">
+                                <div class="table">
+                                    <div class="row ">
+                                        <div class="cell third top">
+                                            <div class="nav">
+                                                <h3><i class="fas fa-bars"></i> Navigation</h3>
+                                                <ul>
+                                                    <li><a href="members.php">Members</a></li>
+                                                    <li><a href="news.php">News</a></li>
+                                                    <li><a href="rules.php">Rules</a></li>
+                                                    <li><a href="admins.php">Admins</a></li>
+                                                    <li><a href="settings.php">Settings</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                        <div class="cell two_third top">
+                                            <div class="main">
+                                                <h1>Stats</h1>
+                                                <div class="stats">
+                                                    <ul>
+                                                        <li>Number of members: <span id="members"></span></li>
+                                                        <li>Number of admins: <span id="admins"></span></li>
+                                                        <li>Number of news posted: <span id="news"></span></li>
+                                                        <li>Number of commens: <span id="commenst"></span></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="table" id="footer">
+                                <div class="row">
+                                    <div class="cell footer middle">
+                                        <div class="copyright">Powered by Idego Fanlisting &#169; Empar Ibáñez</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script>
+            $.fn.serializeObject = function ()
+            {
+                // http://jsfiddle.net/davidhong/gP9bh/
+                var o = {};
+                var a = this.serializeArray();
+                $.each(a, function () {
+                    if (o[this.name] !== undefined) {
+                        if (!o[this.name].push) {
+                            o[this.name] = [o[this.name]];
+                        }
+                        o[this.name].push(this.value || '');
+                    } else {
+                        o[this.name] = encodeURIComponent(this.value) || '';
+                    }
+                });
+                return o;
+            };
+
+            $(document).ready(function () {
+                $("#loggedUser").hide();
+                $("#loginUser").hide();
+                data = {"ob": "user", "op": "checkLogin", "json": ""};
+                $.ajax({
+                    type: "POST",
+                    url: "http://127.0.0.1:8080/fanlist/controller/Controller.php",
+                    data: data,
+                    dataType: "json",
+                    success: function (data) {
+                        if (data.status == 200) {
+                            $("#user").empty().append(data.json.username);
+                            $("#loggedUser").show();
+                            $("#loginUser").hide();
+                        } else {
+                            $("#user").empty();
+                            $("#loggedUser").hide();
+                            $("#loginUser").show();
+                        }
+                    },
+                    error: function (data) {
+                        console.log("Error cliente login");
+                    }
+                });
+                $("#login").click(function () {
+                    values = $("#loginForm").serializeObject();
+                    values.password = forge_sha256($("#password").val());
+                    data = {"ob": "user", "op": "login", "json": JSON.stringify(values)};
+                    $.ajax({
+                        type: "POST",
+                        url: "http://127.0.0.1:8080/fanlist/controller/Controller.php",
+                        data: data,
+                        dataType: "json",
+                        success: function (data) {
+                            if (data.status == 200) {
+                                $("#user").empty().append(data.json.username);
+                                $("#loggedUser").show();
+                                $("#loginUser").hide();
+                            } else {
+                                $(".response").empty().append("Wrong username or password");
+                            }
+                        },
+                        error: function (data) {
+                            $(".response").empty().append("Wrong username or password");
+                        }
+                    });
+                })
+                $("#logOut").click(function () {
+                    data = {"ob": "user", "op": "logout", "json": ""};
+                    $.ajax({
+                        type: "POST",
+                        url: "http://127.0.0.1:8080/fanlist/controller/Controller.php",
+                        data: data,
+                        dataType: "json",
+                        success: function (data) {
+                            if (data.status == 200) {
+                                $("#loggedUser").hide();
+                                $(".response").empty().append("Loged out successfully");
+                                $("#loginUser").show();
+                            } else {
+                                console.log("Error servidor logout")
+                            }
+                        },
+                        error: function (data) {
+                            console.log("Error cliente logout");
+                        }
+                    });
+                })
+            });
+        </script>
     </body>
 </html>
