--- a/html/admin/index.html
+++ b/html/admin/index.html
@@ -58,17 +58,24 @@
                                             <div class="nav">
                                                 <h3><i class="fas fa-bars"></i> Navigation</h3>
                                                 <ul>
-                                                    <li><a href="members.php">Members</a></li>
-                                                    <li><a href="news.php">News</a></li>
-                                                    <li><a href="rules.php">Rules</a></li>
-                                                    <li><a href="admins.php">Admins</a></li>
-                                                    <li><a href="settings.php">Settings</a></li>
+                                                    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                                                    <li><a href="members/index.html"><i class="fas fa-users"></i> Members</a></li>
+                                                    <li><a href="news/index.html"><i class="fas fa-newspaper"></i> News</a></li>
+                                                    <li><a href="rules/index.html"><i class="fas fa-align-center"></i> Rules</a></li>
+                                                    <li><a href="admins/index.html"><i class="fas fa-user"></i> Admins</a></li>
+                                                    <li><a href="settings/index.html"><i class="fas fa-cogs"></i> Settings</a></li>
                                                 </ul>
                                             </div>
                                         </div>
                                         <div class="cell two_third top">
                                             <div class="main">
-                                                <h1>Stats</h1>
+                                                <div class="table title">
+                                                    <div class="row">
+                                                        <div class="cell two_third top">
+                                                            <h1>Stats</h1>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                                 <div class="stats">
                                                     <ul>
                                                         <li>Number of members: <span id="members"></span></li>
